--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-rate-limit": "^7.4.0",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "serverless-http": "^3.2.0",
     "uuid": "^10.0.0"
   }
